--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "angular-ui-router": "^0.4.2",
     "bootstrap": "^3.3.7",
     "file-saver": "^1.3.3",
+    "kartik-v/yii2-mpdf": "*",
     "moment": "^2.17.1",
     "underscore": "^1.8.3",
     "vjs-video": "^0.1.10",
-    "xlsx": "^0.9.11",
-    "kartik-v/yii2-mpdf": "*"
+    "xlsx": "^0.9.11"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
