--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^1.3.3",
     "kartik-v/yii2-mpdf": "*",
     "moment": "^2.17.1",
+    "ui-select": "^0.19.8",
     "underscore": "^1.8.3",
     "vjs-video": "^0.1.10",
     "xlsx": "^0.9.11"
