--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-toastr": "^2.1.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
+    "angular-ui-uploader": "^1.4.1",
     "bootstrap": "^3.3.7",
     "file-saver": "^1.3.3",
     "kartik-v/yii2-mpdf": "*",
